k8s/trust-access-control-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trust-access-control-service
  labels:
    app: trust-access-control-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trust-access-control-service
  template:
    metadata:
      labels:
        app: trust-access-control-service
    spec:
      containers:
        - name: trust-access-control-service
          image: trust-access-control-service:latest
          ports:
            - containerPort: 8080
